--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
   <app-donut-chart></app-donut-chart>
 </section>
 
+<section style="width:600px;height:400px">
+  <compared-donut-chart></compared-donut-chart>
+</section>
+
 <button (click)="next()">Next One</button>
 <button (click)="disconnect()">Stop!</button>
 <button (click)="connect()">Restore Connection</button>
