refactor for compared donut

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </section>
 
 <section style="width:600px;height:400px">
-  <compared-donut-chart></compared-donut-chart>
+  <app-compared-donut-chart></app-compared-donut-chart>
 </section>
 
 <button (click)="next()">Next One</button>
