add pieChart & add more theme color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,10 @@
   <app-compared-donut-chart></app-compared-donut-chart>
 </section>
 
+<section style="width:600px;height:400px">
+  <pie-chart></pie-chart>
+</section>
+
 <button (click)="next()">Next One</button>
 <button (click)="disconnect()">Stop!</button>
 <button (click)="connect()">Restore Connection</button>
