add BarChart with grouped Data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,10 @@
   <pie-chart></pie-chart>
 </section>
 
+<section *ngIf="'Bar' === current">
+  <bar-chart></bar-chart>
+</section>
+
 <button (click)="next()">Next One</button>
 <button (click)="disconnect()">Stop!</button>
 <button (click)="connect()">Restore Connection</button>
